--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <p>Map authored by Kenny Stancil</p>
     <p>Data: <a href='https://data.census.gov/cedsci/'>U.S. Census Bureau</a></p>
     <p>See my projects on <a href="https://github.com/kwstancil">GitHub</a></p>
-    <p>Visit my <a href='https://kwstancil.github.io/map-portfolio/'>mapping portfolio</a></p>
+    <p>Visit my <a href='https://kwstancil.github.io/portfolio/'>portfolio</a></p>
   </footer>
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
